Revert Java version changes - restore Java 21 compatibility
Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>